<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"/>

    <Button
        android:id="@+id/signout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signout_button_text"/>

    <TextView
        android:id="@+id/tvPracticePrompt"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:paddingTop="100dp"
        android:text="@string/practicePrompt"/>

    <TextView
        android:id="@+id/tvPractice"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"/>

    <TextView
        android:id="@+id/tvThrowingPrompt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/throwingPrompt" />

    <TextView
        android:id="@+id/tvThrowing"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/next_practice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:inputType="text" />

    <Button
        android:id="@+id/changePracticeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_practice"/>

    <Button
        android:id="@+id/addUser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addUserButtonText"/>

    <Button
        android:id="@+id/findUser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/findUserButtonText"/>

</LinearLayout>
